# stm32_projects

./: .gitignore
STM32F407ZGT6/CMake/cpp_freeRTOS_template/: .clangd  .mxproject  CMakeLists.txt  cpp_freeRTOS_template.ioc
STM32F407ZGT6/CMake/cpp_freeRTOS_template/Core/Inc/: main.h  stm32f4xx_it.h
STM32H750XBH6/CMake/: README.md
STM32H750XBH6/CMake/SD_FatFS/: .clang-format  .clangd  .mxproject  STM32H750XBH6.ioc
STM32H750XBH6/CMake/bootloader/: .mxproject  CMakeLists.txt  STM32H750XBH6.ioc  STM32H750XX_FLASH.ld  startup_stm32h750xx.s
STM32H750XBH6/CMake/bootloader/cmake/: starm-clang.cmake
STM32H750XBH6/CMake/deploy-ssd/: STM32H743XIHx_FLASH.ld
STM32H750XBH6/CMake/deploy-ssd/cmake/: gcc-arm-none-eabi.cmake
STM32H750XBH6/CMake/lcd_lvgl/: lcd_lvgl.ioc
STM32H750XBH6/SD_FatFS/: CMakeLists.txt  STM32H750XBHx_FLASH.ld
STM32H750XBH6/SD_FatFS/Core/Inc/: stm32h7xx_hal_conf.h
STM32H750XBH6/SD_FatFS/Core/Src/: gpio.c  sdmmc.c  system_stm32h7xx.c  usart.c
STM32H750XBH6/SD_FatFS/lvgl/: CMakeLists.txt
STM32H750XBH6/deploy-ssd/: .mxproject  CMakeLists.txt  STM32H743.ioc
STM32H750XBH6/deploy-ssd/Core/Inc/: stm32h7xx_hal_conf.h
STM32H750XBH6/deploy-ssd/Core/Src/: main.c  stm32h7xx_hal_msp.c
STM32H750XBH6/deploy-ssd/X-CUBE-AI/App/: app_x-cube-ai.c  network.h  network_data.h  network_data_params.c  network_data_params.h  network_generate_report.txt
STM32H750XBH6/deploy-ssd/cmake/stm32cubemx/: CMakeLists.txt
STM32H750XBH6/lcd_lvgl/: .mxproject  CMakeLists.txt
STM32H750XBH6/lcd_lvgl/Core/Src/: gpio.c  main.c  spi.c
(+56 files in other folders)
